# FieldNav

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md
c_legacy/: CMakeLists.txt  README.md
c_legacy/include/fieldnav/c_legacy/: matrix.h
c_legacy/src/: matrix.c
c_legacy/tests/: CMakeLists.txt  test_matrix.c
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
datasets/: README.md  download.sh
docs/: README.md  architecture.md  getting_started.md  roadmap.md
docs/decisions/: 0001-cpp17-minimum.md  0002-eigen-for-linalg.md  0003-apache-license.md  README.md  template.md
embedded/: README.md
filters/: CMakeLists.txt  README.md
papers/: README.md
ros2_ws/: README.md
simulation/: README.md
tools/: README.md
